--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
+    "joi": "^17.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.9"
   }
